--- a/podfile
+++ b/podfile
@@ -6,5 +6,6 @@ pod 'AFNetworking', '~> 3.0.0'
 pod 'MMDrawerController', '~> 0.5.7'
 pod 'ReactiveCocoa', '~> 4.2.2'
 pod 'TSMessages'
+pod 'Masonry'
 end
 
